v6.2.1
- Fixed - ability to disable FSE link (Site Editor) under Appearance -> Themes
- Added - ability to remove style attribute from multiple selectors while extending Processor class via remove_style method

v6.2.0
- Updated - date input styles to own class (micro optimization)
- Added - core/details block support with inheritance to RankMath and YoastSEO FAQ blocks

v6.1.9
- Updated - cleanup inputs styles / validation / variables
- Updated - inputs/group constructor - add label, messages etc
- Updated - inputs/checkbox exclusive option to act as a radio (used in CF7 plugin)
- Updated - inputs/toggle background style vars to theme.json
- Updated - inputs/range match background color from inputs vars
- Updated - inputs specific variables moved to own classes (.form-check,.form-switch,.form-select)
- Updated - default plugins (removed Google Tools) and update WooCommerce about link
- Updated - new method for retrieving Dynamic block asset handle
- Fixed - core/navigation-link and core/navigation-submenu dropdown classes logic (due to issues or removal of isTopLevelLink - we dont relly on it anymore)

v6.1.8
- Updated - restored .wp-block-columns.grid default gap
- Updated - toast component style to use WP theme.json variables
- Fixed - offcanvas visibility styles
- Added - e-commerce and wide-blocks tags for WP.Org

v6.1.7
- Removed - gap-# utility class (replaced previously with g-#)
- Updated - core/comments-title top margin to zero (after removing certain CSS reboot)
- Updated - core/navigation-submenu and core/page-list to use new Dropdowns component styles
- Updated - core/navigation toggler padding to 0 and SVG color to full black
- Updated - offcanvas/modal views to load their Components styles (along with scripts)
- Updated - disable notifications for CF7 and WooCommerce if plugins already installed
- Updated - expose Dropdown/Modal/Offcanvas modules to wecodeart object (wecodeart.plugins = {...})