@@ -1,1 +1,1 @@
-.wp-block-navigation{display:flex;align-items:center}.nav{--wp--nav-link-padding-x:.5rem;--wp--nav-link-padding-y:.5rem;--wp--nav-link-color:rgba(var(--wp--emphasis-color-rgb),0.55);--wp--nav-link-hover-color:rgba(var(--wp--emphasis-color-rgb),0.55);--wp--nav-link-disabled-color:rgba(var(--wp--emphasis-color-rgb),0.55);display:flex;flex-wrap:wrap;list-style:none;padding-left:0;margin:0}.nav-fill :where(.nav-link,.nav-item){flex:1 1 auto;text-align:center}.nav-justified :where(.nav-link,.nav-item){flex-basis:0;flex-grow:1;text-align:center}:where(.nav-fill,.nav-justified) .nav-item .nav-link{width:100%}.navbar{--wp--navbar-padding-x:0;--wp--navbar-padding-y:.5rem;--wp--navbar-color:rgba(var(--wp--emphasis-color-rgb),0.65);--wp--navbar-hover-color:rgba(var(--wp--emphasis-color-rgb),0.8);--wp--navbar-active-color:rgba(var(--wp--emphasis-color-rgb),1);--wp--navbar-disabled-color:rgba(var(--wp--emphasis-color-rgb),0.3);position:relative;display:flex;flex-wrap:wrap;align-items:center;justify-content:space-between;padding-top:.5rem;padding-bottom:.5rem}.navbar-nav{--wp--nav-link-padding-x:0;--wp--nav-link-padding-y:0;--wp--nav-link-color:var(--wp--navbar-color);--wp--nav-link-hover-color:var(--wp--navbar-hover-color);--wp--nav-link-disabled-color:var(--wp--navbar-disabled-color);display:flex;flex-direction:column;padding-left:0;margin-bottom:0;list-style:none}.navbar-nav .dropdown-menu{position:static}.navbar-text{padding-top:.5rem;padding-bottom:.5rem}.navbar-collapse{flex-basis:100%;flex-grow:1;align-items:center}.navbar-nav-scroll{max-height:var(--wp--scroll-height,75vh);overflow-y:auto}@media (prefers-reduced-motion:reduce){.nav-link{transition:none}}:is(.wp-site-header,.wp-site-footer) .wp-block-navigation{padding-top:0;padding-bottom:0}
+.wp-block-navigation{display:flex;align-items:center}.wp-block-navigation :where(.offcanvas,.offcanvas-body,.navbar-nav){flex:1 1 100%;gap:inherit}.nav{--wp--nav-link-padding-x:.5rem;--wp--nav-link-padding-y:.5rem;--wp--nav-link-color:rgba(var(--wp--emphasis-color-rgb),0.55);--wp--nav-link-hover-color:rgba(var(--wp--emphasis-color-rgb),0.55);--wp--nav-link-disabled-color:rgba(var(--wp--emphasis-color-rgb),0.55);display:flex;flex-wrap:wrap;list-style:none;padding-left:0;margin:0}.nav-fill :where(.nav-link,.nav-item){flex:1 1 auto;text-align:center}.nav-justified :where(.nav-link,.nav-item){flex-basis:0;flex-grow:1;text-align:center}:where(.nav-fill,.nav-justified) .nav-item .nav-link{width:100%}.navbar{--wp--navbar-padding-x:0;--wp--navbar-padding-y:.5rem;--wp--navbar-color:rgba(var(--wp--emphasis-color-rgb),0.65);--wp--navbar-hover-color:rgba(var(--wp--emphasis-color-rgb),0.8);--wp--navbar-active-color:rgba(var(--wp--emphasis-color-rgb),1);--wp--navbar-disabled-color:rgba(var(--wp--emphasis-color-rgb),0.3);position:relative;display:flex;flex-wrap:wrap;align-items:center;justify-content:space-between;padding-top:.5rem;padding-bottom:.5rem}.navbar-nav{--wp--nav-link-padding-x:0;--wp--nav-link-padding-y:0;--wp--nav-link-color:var(--wp--navbar-color);--wp--nav-link-hover-color:var(--wp--navbar-hover-color);--wp--nav-link-disabled-color:var(--wp--navbar-disabled-color);display:flex;flex-direction:column;padding-left:0;margin-bottom:0;list-style:none}.navbar-nav .dropdown-menu{position:static}.navbar-text{padding-top:.5rem;padding-bottom:.5rem}.navbar-collapse{flex-basis:100%;flex-grow:1;align-items:center}.navbar-nav-scroll{max-height:var(--wp--scroll-height,75vh);overflow-y:auto}@media (prefers-reduced-motion:reduce){.nav-link{transition:none}}:is(.wp-site-header,.wp-site-footer) .wp-block-navigation{padding-top:0;padding-bottom:0}
