@@ -1,1 +1,1 @@
-<?php return array('dependencies' => array('wp-polyfill'), 'version' => 'c4fdc04c6a7195d8ff53');
+<?php return array('dependencies' => array('wp-polyfill'), 'version' => '5e53d22278e5035bdac8');
