@@ -11,6 +11,10 @@ $columns: $grid-columns;
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(max(var(--wp--column-min), var(--wp--column-max)), 1fr));
     grid-gap: var(--wp--style--block-gap);
+    
+    &.is-layout-grid {
+        grid-template-columns: repeat(auto-fill, minmax(max(var(--wp--column-min), var(--wp--column-max)), 1fr));
+    }
 
     @each $breakpoint in map-keys($breakpoints) {
         $infix: breakpoint-infix($breakpoint, $breakpoints);
